--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --safe-area-inset-top: env(safe-area-inset-top, 0px);
+  --safe-area-inset-right: env(safe-area-inset-right, 0px);
+  --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px);
+  --safe-area-inset-left: env(safe-area-inset-left, 0px);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,8 +16,12 @@
   }
 }
 
+header{
+  padding-top: var(--safe-area-inset-top);
+}
+
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 20;
+  padding: var(--safe-area-inset-top) var(--safe-area-inset-right) 
+           var(--safe-area-inset-bottom) var(--safe-area-inset-left);
 }
